--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 .gamediv {
     position:relative;
-    width:640px;
-    height:480px;
+    width:768px;
+    height:640px;
     margin:0 auto;
+    background-color:black;
 }
 
 .gamediv canvas {
